--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=parsigift
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=2721370
 #DB_DATABASE=apidy_parsigift
 #DB_USERNAME=apidy_parsigift
 #DB_PASSWORD=dH^R72_m5jXL17*u4
